# HTTP-server-CPP

./: CMakeLists.txt  README.md  main.cpp
ConnectionsManager/: ConnectionsManager.cpp  ConnectionsManager.h
Request/: Request.cpp  Request.h
Response/: Response.cpp  Response.h
Router/: Router.cpp  Router.h
Server/: Listener.h  Server.h
Static/: index.html
